Bug 276389 - Muon is missing multiarchsupport
Summary: Muon is missing multiarchsupport
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-24 13:58 UTC by Jonathan Kolberg
Modified: 2011-09-20 15:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.1, 1.2.65
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Kolberg 2011-06-24 13:58:10 UTC
Version:           unspecified (using KDE 4.6.3) 
OS:                Linux

If you use multiarch in Kubuntu (Oneiric) than you’ll see every package that’s also avaible for an other arch twice.

Reproducible: Always

Steps to Reproduce:
Set up multiarch following the guide on http://wiki.debian.org/Multiarch/Implementation

Actual Results:  
You see the packages that are already multiarched twice.

Expected Results:  
You see them only one time and you can choose which to install (using the default if you don’t choose one)
Comment 1 Jonathan Thomas 2011-08-29 23:45:59 UTC
Git commit 7d152cf1faca2f476b2855ee19ba29231f02e7d5 by Jonathan Thomas.
Committed on 30/08/2011 at 01:38.
Pushed by jmthomas into branch 'master'.

APT MultiArch support. On multiarch-enabled systems it:
- Prevents foreign-arch packages not explicitly supporting multiarch from being added to
  QApt::Backend's central package list
- Provides a Backend::isMultiArchEnabled() to return whether or not dpkg/apt are set up
  for multiarch
- Provides a Package::architecture() to determine the architecture of a package.
- Provides a Package::isMultiArchEnabled() to return whether or not a package explicitly
  supports multiarch installation.

I am considering this a bugfix, since with APT 0.8.16+ behavior of clients that do not
have a way to distinguish foreign arch packages from native packages to the user are
quite obnoxious, displaying two identical packages with no sane way to tell them apart,
doing this for just about every package available. With this patch, consumers will not
list foreign arch packages that aren't multiarch-enabled, but they will still have to
use the two new QApt::Package functions to disambiguate packages that are multiarch-
enabled.

CCBUG: 276389
FIXED-IN:1.2.1,1.2.65

M  +6    -0    src/backend.h
M  +28   -0    src/backend.cpp
M  +19   -0    src/package.h
M  +20   -0    src/package.cpp

http://commits.kde.org/libqapt/7d152cf1faca2f476b2855ee19ba29231f02e7d5
Comment 2 Jonathan Thomas 2011-08-29 23:46:34 UTC
Git commit e8e326f5a9a6f02dbcbe78e1bdc23cc3395e2eb6 by Jonathan Thomas.
Committed on 30/08/2011 at 01:38.
Pushed by jmthomas into branch '1.2'.

APT MultiArch support. On multiarch-enabled systems it:
- Prevents foreign-arch packages not explicitly supporting multiarch from being added to
  QApt::Backend's central package list
- Provides a Backend::isMultiArchEnabled() to return whether or not dpkg/apt are set up
  for multiarch
- Provides a Package::architecture() to determine the architecture of a package.
- Provides a Package::isMultiArchEnabled() to return whether or not a package explicitly
  supports multiarch installation.

I am considering this a bugfix, since with APT 0.8.16+ behavior of clients that do not
have a way to distinguish foreign arch packages from native packages to the user are
quite obnoxious, displaying two identical packages with no sane way to tell them apart,
doing this for just about every package available. With this patch, consumers will not
list foreign arch packages that aren't multiarch-enabled, but they will still have to
use the two new QApt::Package functions to disambiguate packages that are multiarch-
enabled.

CCBUG: 276389
FIXED-IN:1.2.1,1.2.65

M  +6    -0    src/backend.h
M  +28   -0    src/backend.cpp
M  +19   -0    src/package.h
M  +20   -0    src/package.cpp

http://commits.kde.org/libqapt/e8e326f5a9a6f02dbcbe78e1bdc23cc3395e2eb6
Comment 3 Jonathan Thomas 2011-08-29 23:49:53 UTC
Git commit 044abcf3562e9fccf5244f7279b7ab77fbd99007 by Jonathan Thomas.
Committed on 30/08/2011 at 01:47.
Pushed by jmthomas into branch 'master'.

Use the new QApt::Package::isMultiArchEnabled and architecture() functions to disambiguate
multi-arch enabled packages of the same name.

I am considering this a bugfix, since with APT 0.8.16+ there is way to distinguish
foreign arch packages from native packages to the user, which is quite obnoxious.
Without such a patch, there are two identical packages for every package available,
with no sane way to tell them apart.

BUG:276389

M  +11   -4    libmuon/PackageModel/PackageModel.cpp

http://commits.kde.org/muon/044abcf3562e9fccf5244f7279b7ab77fbd99007
Comment 4 Jonathan Thomas 2011-08-29 23:50:42 UTC
Git commit c314c6dc15e0f28f6862bd2b3daddeb6e8062e61 by Jonathan Thomas.
Committed on 30/08/2011 at 01:47.
Pushed by jmthomas into branch '1.2'.

Use the new QApt::Package::isMultiArchEnabled and architecture() functions to disambiguate
multi-arch enabled packages of the same name.

I am considering this a bugfix, since with APT 0.8.16+ there is way to distinguish
foreign arch packages from native packages to the user, which is quite obnoxious.
Without such a patch, there are two identical packages for every package available,
with no sane way to tell them apart.

BUG:276389

M  +11   -4    libmuon/PackageModel/PackageModel.cpp

http://commits.kde.org/muon/c314c6dc15e0f28f6862bd2b3daddeb6e8062e61