Use the new QApt::Package::isMultiArchEnabled and architecture() functions to disambiguate multi-arch enabled packages of the same name.

I am considering this a bugfix, since with APT 0.8.16+ there is way to distinguish
foreign arch packages from native packages to the user, which is quite obnoxious.
Without such a patch, there are two identical packages for every package available,
with no sane way to tell them apart.

BUG:276389